Fixed : input field / button and board being too separated on tablet viewl.

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body{
     max-width: 97vw;
     display:flex;
     flex-direction: column;
-    justify-content:space-around;
+    justify-content:center;
     align-items:center;
 }
 
